HelloUltraviolet/Fixtures/RejectedSource/Statements/SyncStatementRecovery/Source/Main.uv
//! Rejected statement specimen for statement recovery synchronization tokens.

public procedure syncStatementRecoveryReference() -> i32 {
    else
    return 1
}
